@@ -11,6 +11,8 @@
 
 
 ngIRCd CVSHEAD
+  - Fix handling of QUIT Messages: send only one message, even if client
+    is member of multiple channels.
   - Don't exit server if closing of a socket fails; instead ignore it and
     pray that this will be "the right thing" ...
   - Implemented the IRC function "WHOWAS".
@@ -601,4 +603,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.271 2005/05/22 23:55:57 alex Exp $
+$Id: ChangeLog,v 1.272 2005/06/04 11:53:24 fw Exp $
